--- a/sitedata/config.yml
+++ b/sitedata/config.yml
@@ -1,6 +1,6 @@
 repo_name: neural-fields-review
-name: Neural Fields in Visual Computing
-tagline: Neural Fields in Visual Computing
+name: Developmental AI
+tagline: Developmental AI
 date: Sept 2021
 favicon: favicon.ico
 logo:
